# novel-web-scrapper

./: .gitignore  CLAUDE.md  README.md  add_novel_nav.py  com.scraper.sync.plist  config.toml  convert_to_obsidian.py  main.py  my_vam.txt  pyproject.toml  scrape_blogs.py  scrape_medium.py  scrape_novels.py  scrape_raindrop.py  sync_all.sh  test_scrape.py
n8n/: novel_sync_workflow.json
