[project]
name = "novel-web-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
